--- a/src/data/levels/05a_CPU/09_Instructions (3-5) - Checks/chat/en.yml
+++ b/src/data/levels/05a_CPU/09_Instructions (3-5) - Checks/chat/en.yml
@@ -4,7 +4,7 @@ main:
   - there are only a few checks
   - they are, basically, instructions that compare values with a register or perform logical operations
   - I don't think you will need help with these
-  - 📚  implement all the check instructions in your `instructions` object!
+  - 📚  _-_implement all the check instructions in your `instructions` object!_--_
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
   responses: []
