--- a/src/data/levels/05a_CPU/15_Execute/chat/es.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/es.yml
@@ -34,7 +34,7 @@ rightway:
     set((m) => m.$exercise = true);
   messages:
   - |-
-    📚  vamos a agregar este método en tu `CPU`:
+    📚  _-_vamos a agregar este método en tu `CPU`:_--_
     **step()**:
       __-> recuerda el valor original de PC
         (llamemos esto <originalPC>)
