--- a/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
@@ -62,7 +62,7 @@ fix:
   - you can, but you'd be breaking compatibility with some games that depend (whether accidentally or intentionally) on that bug
   - I've improvised a quick documentation file talking about it
   - it's in 📄  ~/docs/cpu/page_boundary_bug.en.md~
-  - 📚  introduce that bug and try again!
+  - 📚  _-_introduce that bug and try again!_--_
   run-after-messages: |
     set((m) => {
       m.$canRun = true;
