--- a/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
@@ -3,10 +3,10 @@ main:
   messages:
   - we'll now start coding the CPU, the console's <brain> 🧠
   - at this point, you already have an idea of how it works
-  - 📚  create a file somewhere for the CPU code
-  - its default export should be an empty class
-  - then, import that file from 📄  ~/code/index.js~
-  - and add a `CPU` key (pointing to that class) to the exported object
+  - 📚  _-_create a file somewhere for the CPU code_--_
+  - _-_its default export should be an empty class_--_
+  - _-_then, import that file from _--_📄 _-_ ~/code/index.js~_--_
+  - _-_and add a `CPU` key (pointing to that class) to the exported object_--_
   responses:
   - where should I put the file? [where]
 
