--- a/src/data/levels/05a_CPU/02_Registers/chat/en.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/en.yml
@@ -1,14 +1,14 @@
 ---
 main:
   messages:
-  - "📚  you'll start by creating two classes: `Register8Bit` and `Register16Bit` 🔢"
+  - "📚  _-_you'll start by creating two classes: `Register8Bit` and `Register16Bit` _--_🔢"
   - |-
-    they should have two methods:
+    _-_they should have two methods:_--_
     **getValue()**:
       __-> returns the register's content__
     **setValue(value)**:
       __-> sets the register's content__
-  - the register's content starts from 0 and can be an 8-bit number (0-255) or a 16-bit number (0-65535), depending on the class
+  - _-_the register's content starts from 0 and can be an 8-bit number (0-255) or a 16-bit number (0-65535), depending on the class_--_
   responses:
   - (*) what if I try to write off the limits? 🚫 [limit]
   - (*) what's the best way to implement this? 🤔 [implement]
