--- a/src/data/levels/05a_CPU/03_Flags/chat/es.yml
+++ b/src/data/levels/05a_CPU/03_Flags/chat/es.yml
@@ -27,13 +27,13 @@ what:
   run: |
     set((m) => m.$exercise = true);
   messages:
-  - 📚  crea una clase `FlagsRegister` con 6 propiedades booleanas (llamadas ~c~, ~z~, ~i~, ~d~, ~v~ y ~n~)
-  - inicialízalas en ```javascript false```
-  - luego, implementa ```javascript getValue()``` y ```javascript setValue(value)``` siguiendo la tabla anterior
-  - "`getValue()` tiene que retornar un número de 8 bits con todas las banderas" 
-  - "`setValue(...)` tiene que asignar todas las banderas a partir del número de 8 bits que recibe" 
-  - p. ej. con ~i~ y ~v~ encendidas, ```javascript getValue()``` debería retornar ```javascript 0b01100100```
-  - y ```javascript setValue(0b00000010)``` debería poner todos los booleanos en ```javascript false```, menos ~z~
+  - 📚  _-_crea una clase `FlagsRegister` con 6 propiedades booleanas (llamadas ~c~, ~z~, ~i~, ~d~, ~v~ y ~n~)_--_
+  - _-_inicialízalas en ```javascript false```_--_
+  - _-_luego, implementa ```javascript getValue()``` y ```javascript setValue(value)``` siguiendo la tabla anterior_--_
+  - "**getValue()** __tiene que retornar un número de 8 bits con todas las banderas__"
+  - "**setValue(...)** __tiene que asignar todas las banderas a partir del número de 8 bits que recibe__"
+  - _-_p. ej. con ~i~ y ~v~ encendidas, ```javascript getValue()``` debería retornar ```javascript 0b01100100```_--_
+  - _-_y ```javascript setValue(0b00000010)``` debería poner todos los booleanos en ```javascript false```, menos ~z~_--_
   responses:
   - (*) necesito un poco de ayuda 📐 [bits]
   - ✔️  ya tengo la clase [nowwhat]
