--- a/src/data/levels/05a_CPU/05_Stack/chat/es.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/es.yml
@@ -2,16 +2,16 @@
 main:
   messages:
   - ¿recuerdas la pila? 🧱
-  - 📚  crea una nueva clase para ella
-  - tendría que recibir `memory` y `sp` de la CPU, ya que va a tener que interactuar con ellos
+  - 📚  _-_crea una nueva clase para ella_--_
+  - _-_tendría que recibir `memory` y `sp` de la CPU, ya que va a tener que interactuar con ellos_--_
   - |-
-    implementa estos métodos:
+    _-_implementa estos métodos:_--_
     **push(value)**:
       __-> escribe <value> en la dirección de memoria <direcciónActual>, luego decrementa <sp>__
     **pop()**:
       __-> incrementa <sp> y retorna el resultado de leer <direcciónActual> de la memoria__
-  - la <direcciónActual> siempre es $0100 (donde vive la pila en la RAM), más el valor en [SP]
+  - _-_la <direcciónActual> siempre es $0100 (donde vive la pila en la RAM), más el valor en [SP]_--_
   - |-
-    cuando termines, agrega una nueva instancia de la pila a la CPU:
-      ```javascript this.stack = new Stack(this.memory, this.sp);```
+    _-_cuando termines, agrega una nueva instancia de la pila a la CPU:
+      ```javascript this.stack = new Stack(this.memory, this.sp);```_--_
   responses: []
