--- a/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
+++ b/src/data/levels/05a_CPU/07_Instructions (1-5) - Arithmetic/chat/es.yml
@@ -14,11 +14,11 @@ howmany:
   messages:
   - son 16 en total, ¡pero ya programé 3 por ti! 😎
   - y algunas de ellas son muy similares
-  - 📚  crea un objeto siguiendo el mismo formato que el ejemplo
-  - implementa cada una de las 16 instrucciones aritméticas sobre él
-  - y expórtalo bajo la clave `instructions` en ~/code/index.js~
-  - necesitas documentación acerca de qué debería hacer cada instrucción
-  - así que revisa 📄  ~/docs/cpu/instructions.es.md~
+  - 📚  _-_crea un objeto siguiendo el mismo formato que el ejemplo_--_
+  - _-_implementa cada una de las 16 instrucciones aritméticas sobre él_--_
+  - _-_y expórtalo bajo la clave `instructions` en ~/code/index.js~_--_
+  - _-_necesitas documentación acerca de qué debería hacer cada instrucción_--_
+  - _-_así que revisa _--_📄 _-_ ~/docs/cpu/instructions.es.md~_--_
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu/instructions.es.md");
   responses:
