--- a/src/data/levels/05a_CPU/10_Instructions (4-5) - Branching/chat/es.yml
+++ b/src/data/levels/05a_CPU/10_Instructions (4-5) - Branching/chat/es.yml
@@ -3,7 +3,7 @@ main:
   messages:
   - las bifurcaciones implican cambiar el valor de [PC] (el "Program Counter")
   - y eso es lo que todas estas instrucciones hacen
-  - 📚  ¡implementa todas las instrucciones de bifurcaciones en tu objeto `instructions`!
+  - 📚  _-_¡implementa todas las instrucciones de bifurcaciones en tu objeto `instructions`!_--_
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu_instructions.es.md");
   responses: []
