--- a/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
@@ -27,8 +27,8 @@ letscode:
   - en realidad ya codifiqué algunos de estos modos
   - por lo que solo tendrás que implementar "Relative" e "Indirect"
   - ¡puedes tomar el código de 📄  ~/docs/cpu/example_addressing_modes.js~ y continuar desde ahí!
-  - 📚  implementa los modos de direccionamiento restantes
-  - y exporta el objeto bajo la clave `addressingModes` en 📄  ~/code/index.js~
+  - 📚  _-_implementa los modos de direccionamiento restantes_--_
+  - _-_y exporta el objeto bajo la clave `addressingModes` en _--_📄 _-_ ~/code/index.js~_--_
   responses:
   - ayúdame con el modo "Relative" 😅 [relative]
   - ayúdame con el modo "Indirect" 😅 [indirect]
