--- a/src/data/levels/05a_CPU/13_Addressing modes (2-2)/chat/en.yml
+++ b/src/data/levels/05a_CPU/13_Addressing modes (2-2)/chat/en.yml
@@ -6,7 +6,7 @@ main:
   - take a look at the example pseudocode in the documentation 👀
   - you have to be careful and apply the appropriate `byte.toU8(...)` and `byte.toU16(...)` calls
   - e.g. in the "Absolute,X" mode, if the <input> is $FFFF and [X] is 3, the <output> must be $0002 (not $10002)
-  - 📚  implement the missing modes!
+  - 📚  _-_implement the missing modes!_--_
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu/addressing_modes.en.md");
   responses: []
