--- a/src/data/levels/05a_CPU/13_Addressing modes (2-2)/chat/es.yml
+++ b/src/data/levels/05a_CPU/13_Addressing modes (2-2)/chat/es.yml
@@ -6,7 +6,7 @@ main:
   - hecha un vistazo al pseudocódigo de ejemplo en la documentación 👀
   - tienes que tener cuidado y aplicar las llamadas a `byte.toU8(...)` y `byte.toU16(...)` apropiadas
   - p. ej. en el modo "Absolute,X", si la <entrada> es $FFFF y [X] es 3, el <output> tiene que ser $0002 (y no $10002)
-  - 📚  ¡implementa los modos restantes!
+  - 📚  _-_¡implementa los modos restantes!_--_
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu/addressing_modes.es.md");
   responses: []
