Adding last graphics to CPU

--- a/src/data/levels/05a_CPU/05_Stack/chat/en.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/en.yml
@@ -2,6 +2,7 @@
 main:
   messages:
   - remember the stack? 🧱
+  - <{stack.png}>
   - 📚  _-_create a new class for it_--_
   - _-_it should receive the `memory` and `sp` from the CPU, as it will have to interact with them_--_
   - |-
