--- a/src/data/levels/05a_CPU/05_Stack/chat/es.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/es.yml
@@ -2,6 +2,7 @@
 main:
   messages:
   - ¿recuerdas la pila? 🧱
+  - <{stack.png}>
   - 📚  _-_crea una nueva clase para ella_--_
   - _-_tendría que recibir `memory` y `sp` de la CPU, ya que va a tener que interactuar con ellos_--_
   - |-
