--- a/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
+++ b/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
@@ -6,6 +6,7 @@ main:
   - or when using the `RTS` instruction and the CPU needs to restore [PC] from the stack
   - in these cases, the <Little Endian> convention is used 🔌
   - "that means: the least significant byte (\"low byte\") is stored first, then the most significant byte (\"high byte\")"
+  - <{little_endian.png}>
   - |-
     📚  _-_implement this method in `CPUMemory`:_--_
     **read16(address)**:
