Stop auto-opening files

--- a/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/es.yml
+++ b/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/es.yml
@@ -3,9 +3,8 @@ main:
   messages:
   - las instrucciones de datos son muy simples
   - como el nombre sugiere, se tratan de guardar y mover datos 😉
-  - 📚  _-_¡implementa todas las instrucciones de datos en tu objeto `instructions`!_--_
-  run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu/instructions.es.md");
+  - 📚  _-_siguiendo _--_📄 _-_ ~/docs/cpu/instructions.es.md~,_--_
+  - _-_¡implementa todas las instrucciones de datos en tu objeto `instructions`!_--_
   responses:
   - necesito ayuda con `PHP` 😅 [php]
 
