--- a/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/en.yml
+++ b/src/data/levels/05a_CPU/08_Instructions (2-5) - Data/chat/en.yml
@@ -3,9 +3,8 @@ main:
   messages:
   - data instructions are pretty simple
   - as the name suggests, they're all about storing and moving data 😉
-  - 📚  _-_implement all the data instructions in your `instructions` object!_--_
-  run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
+  - 📚  _-_following _--_📄 _-_ ~/docs/cpu/instructions.en.md~,_--_
+  - _-_implement all the data instructions in your `instructions` object!_--_
   responses:
   - I need help with `PHP` 😅 [php]
 
