--- a/src/data/levels/05a_CPU/10_Instructions (4-5) - Branching/chat/en.yml
+++ b/src/data/levels/05a_CPU/10_Instructions (4-5) - Branching/chat/en.yml
@@ -3,7 +3,6 @@ main:
   messages:
   - branching means changing the value of [PC] (the Program Counter)
   - and that's what all these instructions do
-  - 📚  _-_implement all the branching instructions in your `instructions` object!_--_
-  run-after-messages: |
-    store.dispatch.savedata.openFile("/docs/cpu/instructions.en.md");
+  - 📚  _-_following _--_📄 _-_ ~/docs/cpu/instructions.en.md~,_--_
+  - _-_implement all the branching instructions in your `instructions` object!_--_
   responses: []
