--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/es.yml
@@ -80,7 +80,7 @@ understand:
       usesChrRam: false, // (true si chrRomPages === 0)
       has512BytePadding: false, // (obtener esto de <Flags 6>)
       hasPrgRam: false, // (obtener esto de <Flags 6>)
-      mirroring: "VERTICAL", // (obtener esto de <Flags 6>)
+      mirroringId: "VERTICAL", // (obtener esto de <Flags 6>)
       mapperId: 4 // (obtener esto de <Flags 6> y <Flags 7>)
     }```_--_
   responses:
