--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@uiw/codemirror-extensions-langs": "4.12.3",
     "@uiw/react-codemirror": "4.11.6",
     "bootstrap": "^5.2.0",
+    "broken-neees": "^1.0.2",
     "browserfs": "^1.4.3",
     "classnames": "^2.2.6",
     "cli-highlight": "^2.1.11",
@@ -136,7 +137,6 @@
     "chai": "^4.3.6",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
-    "cursed-nes-emu": "^1.999.10",
     "electron": "6.0.12",
     "electron-builder": "21.2.0",
     "husky": "^1.3.1",
