--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -12,6 +12,7 @@ main:
 
 works:
   messages:
+  - well...
   - it fails in almost every aspect
   - tons of <bugs>
   - it's like the author was drunk or something 🙃 🔫
