--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
@@ -12,6 +12,7 @@ main:
 
 works:
   messages:
+  - bueno...
   - falla en casi todos los aspectos
   - montones de <errores>
   - es como si el autor hubiera estado borracho o algo así 🙃 🔫
