--- a/src/data/levels/04_Memory/02_Devices/chat/en.yml
+++ b/src/data/levels/04_Memory/02_Devices/chat/en.yml
@@ -1,29 +1,19 @@
 ---
 main:
   messages:
-  - your CPU memory has to be connected to everything
-  - for example, to map <PRG-ROM> into memory, you need to connect a 🗜️  mapper
-  - but so far, we've only coded a few components, and ZERO mappers 😅
-  responses:
-  - so, what's a mapper? [mapper]
-
-mapper:
-  messages:
-  - they're circuits inside the cartridge that control how the ROM data is read by the console
-  - each game uses a specific mapper
-  - the more mappers your emulator supports, the more games are compatible 👾
-  responses:
-  - then I guess we need to code at least one mapper, right? [onemapper]
-
-onemapper:
-  messages:
-  - nah, <BrokenNEEES> supports the most common mappers (0-4)
-  - and surprisingly, they all work! so you'll be using those for now
-  - (I'll teach you how to implement them in the Mappers chapter, so you can add more)
-  - now let's focus on receiving a bunch of <devices>
+  - remember, every component has to be connected to the memory
+  - as far as you make progress in your development, you will have to update your `CPUMemory` class, adding the correct mappings
+  - let's just focus on receiving a bunch of <devices> 📱
   - we'll map them later!
   - |-
     📚  _-_add to your `CPUMemory` the following method:_--_
     **onLoad(ppu, apu, mapper, controllers)**:
       __-> saves the parameters as properties (this.ppu, this.apu, etc.)__
+  responses:
+  - who calls that method? [who]
+
+who:
+  messages:
+  - when a game is loaded, <BrokenNEEES> will call this method automatically
+  - so that the memory has access to the rest of the hardware
   responses: []
