--- a/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/01_New CPU/chat/en.yml
@@ -3,17 +3,8 @@ main:
   messages:
   - we'll now start coding the CPU, the console's <brain> 🧠
   - at this point, you already have an idea of how it works
-  - 📚  _-_create a file somewhere for the CPU code_--_
+  - 📚  _-_create a file in _--_📄 _-_ ~/code/cpu/CPU.js~ for the CPU code_--_
   - _-_its default export should be an empty class_--_
   - _-_then, import that file from _--_📄 _-_ ~/code/index.js~_--_
   - _-_and add a `CPU` key (pointing to that class) to the exported object_--_
-  responses:
-  - where should I put the file? [where]
-
-where:
-  messages:
-  - it doesn't matter 🤷
-  - from now on, you are in charge of organizing your own code
-  - saving all your CPU code inside a ~cpu~ directory would be a good pattern, though
-  - the tests will find your classes through 📄  ~/code/index.js~
   responses: []
