--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -44,12 +44,9 @@ nowwhat:
   - |-
     entonces, agrega el siguiente constructor a tu clase `CPU`:
       ```javascript
-      import CPUMemory from "/code/CPUMemory";
-      // ☝️  importar memoria
-
       export default class CPU {
-        constructor() {
-          this.memory = new CPUMemory();
+        constructor(cpuMemory) {
+          this.memory = cpuMemory;
           this.cycle = 0;
           this.extraCycles = 0;
 
