--- a/src/data/levels/04_Memory/03_Choose your fighter/chat/en.yml
+++ b/src/data/levels/04_Memory/03_Choose your fighter/chat/en.yml
@@ -28,6 +28,7 @@ cpu:
     const book = store.getState().book.instance;
     const chapter = book.getChapter(4);
     const firstLevelId = chapter.levels[0].id;
+    store.dispatch.savedata.addCompletedLevelIfNeeded(level.id);
     store.dispatch.savedata.unlockChapter(firstLevelId);
     store.dispatch.savedata.advanceTo(firstLevelId);
   messages: []
@@ -38,6 +39,7 @@ ppu:
     const book = store.getState().book.instance;
     const chapter = book.getChapter(5);
     const firstLevelId = chapter.levels[0].id;
+    store.dispatch.savedata.addCompletedLevelIfNeeded(level.id);
     store.dispatch.savedata.unlockChapter(firstLevelId);
     store.dispatch.savedata.advanceTo(firstLevelId);
   messages: []
@@ -48,6 +50,7 @@ apu:
     const book = store.getState().book.instance;
     const chapter = book.getChapter(6);
     const firstLevelId = chapter.levels[0].id;
+    store.dispatch.savedata.addCompletedLevelIfNeeded(level.id);
     store.dispatch.savedata.unlockChapter(firstLevelId);
     store.dispatch.savedata.advanceTo(firstLevelId);
   messages: []
@@ -58,6 +61,7 @@ controller:
     const book = store.getState().book.instance;
     const chapter = book.getChapter(7);
     const firstLevelId = chapter.levels[0].id;
+    store.dispatch.savedata.addCompletedLevelIfNeeded(level.id);
     store.dispatch.savedata.unlockChapter(firstLevelId);
     store.dispatch.savedata.advanceTo(firstLevelId);
   messages: []
@@ -68,6 +72,7 @@ mappers:
     const book = store.getState().book.instance;
     const chapter = book.getChapter(8);
     const firstLevelId = chapter.levels[0].id;
+    store.dispatch.savedata.addCompletedLevelIfNeeded(level.id);
     store.dispatch.savedata.unlockChapter(firstLevelId);
     store.dispatch.savedata.advanceTo(firstLevelId);
   messages: []
