--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/es.yml
@@ -55,8 +55,8 @@ play:
 
 finish:
   run: |
-    const directory = `${Drive.ROMS_DIR}/non-platform`
-    try { filesystem.mkdir(directory); } catch (e) {}
+    const directory = `${Drive.ROMS_DIR}/non-platform`;
+    filesystem.mkdirp(directory);
 
     ["Bobl.neees", "Spacegulls.neees", "Wolfling.neees"].forEach((file) => {
       filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
