Highlighting other exercise parts

--- a/src/data/levels/05a_CPU/02_Registers/chat/es.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/es.yml
@@ -42,7 +42,7 @@ implement:
 nowwhat:
   messages:
   - |-
-    entonces, agrega el siguiente constructor a tu clase `CPU`:
+    _-_entonces, agrega el siguiente constructor a tu clase `CPU`:
       ```javascript
       export default class CPU {
         constructor(cpuMemory) {
@@ -56,5 +56,5 @@ nowwhat:
           this.sp = new Register8Bit();
           this.pc = new Register16Bit();
         }
-      }```
+      }```_--_
   responses: []
